<resources>
    <string name="app_name">Lonely Pets 4U</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">login</string>
    <string name="textview">TextView</string>
    <string name="sign_in">Sign In</string>
    <string name="register_here">Register Here</string>
    =======
    <string name="error">Error:</string>
    <string name="location_error">Couldn\'t find location, make sure location services are turned on</string>
    <string name="blank"></string>
    <string name="account_created">Registration Successful</string>
    <string name="load_more">Load more...</string>
    <string name="load_more_button">loadMoreButton</string>
    <string name="seller_contact_info">Contact Info: \\n</string>
    <string name="description">Description</string>
    <string name="image_description">Picture of the food being sold</string>
    <string name="feedback_prompt">Leave a review</string>
    <string-array name="search_options">
        <item>Filters</item>
        <item>A to Z (Name)</item>
        <item>A to Z (Description)</item>
        <item>Location</item>
        <item>Time</item>
    </string-array>
    <string name="Loading">Loading...</string>
    <![CDATA[
=======
    <string name="title_activity_food_map">Map</string><![CDATA[
>>>>>>> 1274befa1bfea1a0f2d0a253969dbf95691c8ec0
    >>>>>>> da3db47f4e78d9d3a296357510f1c9152461e598
]]>
</resources>
