<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewFoodDetails">

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="172dp"
        android:layout_height="131dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:padding="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/post_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/upload_picture" />

    <TextView
        android:id="@+id/post_description"
        android:layout_width="327dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="204dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="330dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/post_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_image"
        app:layout_constraintVertical_bias="0.285" />

    <Button
        android:id="@+id/delete_post_button"
        android:layout_width="216dp"
        android:layout_height="89dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="82dp"
        android:text="Delete Post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description" />


</android.support.constraint.ConstraintLayout>
